creusot/tests/should_fail/assoc_type.rs
trait Tr {
    type A;
}

struct Assoc<T: Tr> {
    item: T::A,
}

fn uses<T: Tr>(x: Assoc<T>) {}
